# GABRYOS

./: Bootlooader.cpp  Kernel.cpp  README.md
Drivers/: Criador de apc.cpp  Teclado.cpp
Kernel/: panic.mpl  (+1 more)
sys/: CMakeLists.txt  build.sh  kernl_main.c
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/: CMakeLists.txt  README.md  test.py
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/API_not_supported/: API_not_supported.cc  API_not_supported.h
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/APIs/Google_Maps_Platform/: README.md  maps.c  maps.h
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/APIs/Sentry/: README.md  sentry.c  sentry.h
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/APIs/gabryos.os.Bundle.apk.file/: README.md  bundle.c  bundle.h
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/APIs/vulkan/: README.md  vulkan.c  vulkan.h
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/NDKs/AndroidX/: CMakeLists.txt  README.md
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/NDKs/AndroidX/include/: androidx_core.h  androidx_system.h  androidx_ui.h
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/NDKs/AndroidX/src/: androidx_core.cc  androidx_system.cc  androidx_ui.cc
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/USB_controll/: USB_controll.ko  USB_controll_module. h  USB_controll_module.c
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/kernel/: CMakeLists.txt  kernl_cpu.c  kernl_cpu.h  kernl_debug.c  kernl_debug.h  kernl_debug_rt.c  kernl_debug_rt.h  kernl_log.c  kernl_log.h  kernl_main.c  kernl_memory.c  kernl_memory.h
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/kernel/kernl/: KernelManager.kt  kernl_boot.h  kernl_drivers.cc  kernl_jni.cc  kernl_log.h  kernl_main.cc  kernl_memory.cc
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/ui/: ui.kt
sys/bionic/gabryos/main-repo/src/droid/bionic-gabryos/ziparchive/: ziparchive.cc  ziparchive.config  ziparchive.h
sys/modules/: TEST_module.c  TEST_module.h  USB_controll_module.c  USB_controll_module.h
(+9 files in other folders)
